Minor fixes of bash and processes intros
Signed-off-by: Denis Pynkin <denis.pynkin@collabora.com>

--- a/slides/cmdline/bash-intro.tex
+++ b/slides/cmdline/bash-intro.tex
@@ -7,10 +7,11 @@
         \item {\tt ..} Родительская директория
         \item {\tt .} Текущая директория
       \end{itemize}
-      \pause  
+      \pause
     \item Wildcards
       \begin{itemize}
-        \item {\tt *} Любой набор символов {\tt file*txt : file1.txt filefilefiletxt}
+        \item {\tt *} Любой набор символов \\
+         {\tt file*txt : file1.txt filefilefiletxt}
         \item {\tt $[$<список>$]$ } символ из заданного набора
         \item {\tt ?} любой один символ
       \end{itemize}
@@ -34,8 +35,8 @@
 
   \begin{itemize}
     \item {\tt export VAR=value}
-    \item declare -x
-    \item echo 
+    \item {\tt declare -x}
+    \item {\tt unset}
   \end{itemize}
 
   Переменные окружения наследуются при создании нового процесса
