Fix escaping of ampersand symbol

--- a/slides/cmdline/process-intro.tex
+++ b/slides/cmdline/process-intro.tex
@@ -42,7 +42,7 @@
   \begin{block}{Ctrl-C, Ctrl-Z}
     Запустить из терминала: emacs \\
     Ctrl-Z \\
-    sleep infinity & \\
+    sleep infinity \& \\
     jobs -l \\
     bg +
   \end{block}
