Adjusting talks 02 and 03

--- a/mlug/LinuxEssentials/03-bash_and_process.tex
+++ b/mlug/LinuxEssentials/03-bash_and_process.tex
@@ -6,16 +6,23 @@
  \frametitle{}
  \titlepage
 \end{frame}
+
+\section{ Навигация по файловой системе}
+\begin{frame}
+\frametitle{}
+ \begin{center}
+   {\Large Навигация по файловой системе }
+ \end{center}
+\end{frame}
+\mode<all>{\input{../../slides/fs/fs-structure.tex}}
+
+\mode<all>{\input{../../slides/cmdline/fs-navigation-cmd.tex}}
+
 \section{Полезные инструменты bash}
 \mode<all>{\input{../../slides/cmdline/bash-intro}}
 
 \section{Процессы}
 \mode<all>{\input{../../slides/cmdline/process-intro}}
-
-\section{Перенаправление ввода-вывода}
-\mode<all>{\input{../../slides/cmdline/pipes.tex}}
-\mode<all>{\input{../../slides/cmdline/io-redirection}}
-\mode<all>{\input{../../slides/cmdline/io-redirection-here.tex}}
 
 \mode<all>\input{../branding/completion}
 \end{document}
