Simplified version of lecture about network.
Signed-off-by: Denis Pynkin <denis.pynkin@collabora.com>

--- a/mlug/LinuxEssentials/07-networking-intro.tex
+++ b/mlug/LinuxEssentials/07-networking-intro.tex
@@ -26,30 +26,29 @@
 %%%%%%%%%% Content starts here %%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
+
 \section{Основы работы с сетевой подсистемой}
 
-\mode<all>{\input{../../slides/networking/intro}}
-
-\subsection{Управление интерфейсами}
-\mode<all>{\input{../../slides/networking/interface-management}}
 
 \subsection{Полезные программы}
 \mode<all>{\input{../../slides/networking/useful-progs}}
 
-\section{ssh}
+\subsection{ssh}
 \mode<all>{\input{../../slides/networking/ssh}}
 
+\subsection{Управление интерфейсами}
+\mode<all>{\input{../../slides/networking/intro}}
+\mode<all>{\input{../../slides/networking/interface-management}}
+\subsection{Пример с использованием контейнера}
+\mode<all>{\input{../../slides/containers/systemd_nspawn-infra_quick}}
 
-\section{Дополнительные типы интерфейсов}
+\section{Маршрутизация}
+\mode<all>{\input{../../slides/networking/routing}}
+\mode<all>{\input{../../slides/containers/systemd_nspawn-infra_quick-routing}}
 
-\subsection{alias, vlan}
-\mode<all>{\input{../../slides/networking/alias_vlan}}
-\subsection{Мосты}
-\mode<all>{\input{../../slides/networking/bridge}}
-\subsection{Виртуальные}
-\mode<all>{\input{../../slides/networking/tuntap}}
-\mode<all>{\input{../../slides/networking/macvlan}}
-\mode<all>{\input{../../slides/networking/veth}}
+\section{iptables}
+\mode<all>{\input{../../slides/networking/iptables}}
+\mode<all>{\input{../../slides/containers/systemd_nspawn-infra_quick-iptables}}
 
 \mode<all>\input{../branding/completion}
 \end{document}
