Modified rpm slides

--- a/slides/packaging/repo.tex
+++ b/slides/packaging/repo.tex
@@ -81,7 +81,7 @@
 
 \begin{frame}[fragile]{Упражнение}
   \begin{enumerate}
-      \item Использовать {\tt apt-get} и {\tt yum/dnf} в 2-х разных окружениях
+      %\item Использовать {\tt apt-get} и {\tt yum/dnf} в 2-х разных окружениях
       \item Удалить пакет vim
       \item Установить заново пакет vim
       \item Посмотреть списки файлов для пакетов {\tt rpm, vim}
