Yet another packages lecture update

--- a/mlug/LinuxEssentials/08-pkg.tex
+++ b/mlug/LinuxEssentials/08-pkg.tex
@@ -27,8 +27,8 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 
-\section{Подготовка инфраструктуры}
-\mode<all>{\input{../../slides/containers/systemd_nspawn-infra_quick}}
+%\section{Подготовка инфраструктуры}
+%\mode<all>{\input{../../slides/containers/systemd_nspawn-infra_quick}}
 
 \section{Система управления пакетами}
 
